--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,4 +1,30 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto'
+
+body
+	font-family: 'Roboto', sans-serif
+
 #pong
-	display: block
-	border: 1px solid black
+	// display: block
 	margin: 0 auto
+
+#startPage
+	background: black
+	margin: 0 auto
+	width: 700px
+	height: 400px
+	.text
+		display: block
+		height: 50%
+		color: white
+		font-size: 36px
+		text-align: center
+
+// #gameOver
+// 	background: black
+// 	margin: 0 auto
+// 	width: 700px
+// 	height: 400px
+// 	.text
+// 		color: white
+// 		font-size: 36px
+// 		text-align: center
