--- a/app/css/main.css
+++ b/app/css/main.css
@@ -11,8 +11,26 @@ body {
   width: 700px;
   height: 400px; }
   #startPage .text {
-    display: block;
-    height: 50%;
+    display: inline-block;
+    position: relative;
+    padding: 10px;
+    top: 40%;
+    left: 43%;
+    border: 2px solid white;
+    color: white;
+    font-size: 36px; }
+
+#gameOver {
+  background: black;
+  margin: 0 auto;
+  width: 700px;
+  height: 400px; }
+  #gameOver .text {
+    display: inline-block;
+    position: relative;
+    padding: 10px;
+    top: 40%;
+    left: 35%;
     color: white;
     font-size: 36px;
     text-align: center; }
