--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -21,6 +21,10 @@ body
 		border: 2px solid white
 		color: white
 		font-size: 36px
+		&:hover
+			cursor: pointer
+			background: white
+			color: black
 
 #gameOver
 	background: black
