--- a/app/css/main.css
+++ b/app/css/main.css
@@ -19,6 +19,10 @@ body {
     border: 2px solid white;
     color: white;
     font-size: 36px; }
+    #startPage .text:hover {
+      cursor: pointer;
+      background: white;
+      color: black; }
 
 #gameOver {
   background: black;
