--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,7 +1,9 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto'
+$bg-color: hsl(0, 0%, 70%)
 
 body
 	font-family: 'Roboto', sans-serif
+	background-color: $bg-color
 
 #pong
 	// display: block
